--- a/src/app/components/staff/create-appointment/create-appointment.component.html
+++ b/src/app/components/staff/create-appointment/create-appointment.component.html
@@ -29,6 +29,6 @@
             <label for="narration">Description</label> 
             <textarea formControlName="narration" name="narration" id="narration" style="border-radius: 0;" class="form-control"></textarea>
         </div>
-        <button style="border-radius: 0;" class="my-2 btn btn-primary">Add Appointment</button>
+        <button style="border-radius: 0;padding: .4rem;" class="my-2">Add Appointment</button>
     </form>
 </div>
