--- a/src/app/components/premise/premise-leave-reqs/premise-leave-reqs.component.html
+++ b/src/app/components/premise/premise-leave-reqs/premise-leave-reqs.component.html
@@ -5,28 +5,28 @@
         </div>
     </div>
     <table mat-table [dataSource]="dataSource" matSort>
-        <ng-container matColumnDef="firstName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let row"> {{row.first}} {{row.last}}</td>
+        <ng-container matColumnDef="staff_name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Staff Name </th>
+            <td mat-cell *matCellDef="let row"> {{row.staff_name}}</td>
         </ng-container>
     
-        <ng-container matColumnDef="msisdn">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone No.  </th>
-            <td mat-cell *matCellDef="let row"> {{row.msisdn}} </td>
+        <ng-container matColumnDef="reason">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Reason </th>
+            <td mat-cell *matCellDef="let row"> {{row.reason}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Email  </th>
-            <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+        <ng-container matColumnDef="requested_from">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Date  </th>
+            <td mat-cell *matCellDef="let row"> {{row.requested_from}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="designation">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Designation  </th>
-            <td mat-cell *matCellDef="let row"> {{row.designation[0].name}} </td>
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Status  </th>
+            <td mat-cell *matCellDef="let row"> {{row.status}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="fingerprint">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fingerprint  </th>
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Action  </th>
             <td mat-cell *matCellDef="let element"><span style="font-size: 1.5rem;"><i [ngClass]="element.fingerprint.fingerprint ? 'registered' : ''" class="bi bi-fingerprint light-text" ></i></span></td>
         </ng-container>
     
