--- a/src/app/components/staff/create-leave-req/create-leave-req.component.html
+++ b/src/app/components/staff/create-leave-req/create-leave-req.component.html
@@ -21,6 +21,6 @@
              <input formControlName="to" class="form-control" type="datetime-local" name="to" id="to" placeholder="end">
              <small *ngIf="to?.invalid && to?.touched" style="color: rgb(240, 79, 79);">*Required</small>
          </div>         
-        <button [disabled]="leaveForm.invalid"  type="submit" class="btn my-2 btn-outline-info" style="width: 100%;">Submit</button>
+        <button [disabled]="leaveForm.invalid"  type="submit" class="my-2" style="width: max-content;padding: .4rem;">Submit</button>
     </form>
 </div>
