--- a/src/app/components/staff/create-leave-req/create-leave-req.component.scss
+++ b/src/app/components/staff/create-leave-req/create-leave-req.component.scss
@@ -1,3 +1,18 @@
 button, input {
     border-radius: 0;
 }
+
+button {
+    border: 2px solid black;
+    background-color: transparent;
+    cursor: pointer;
+    transition: all ease .2s;
+    border-radius: 0;
+    margin: 0 .2rem;
+
+    &:hover {
+        background-color: yellow;
+        border: 2px solid yellow;
+
+    }
+}
