--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -26,17 +26,46 @@
                                 <input class="light-sm-border" type="text" matInput  #input style="width: 200px;padding: .5rem;" placeholder="Search Appointments">
                             </div>
                         </div>
-                        <!-- <table mat-table [dataSource]="dataSource" matSort>  
+                        <table mat-table [dataSource]="dataSource" matSort>  
             
                 
-                            <ng-container matColumnDef="department_name">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                            <td mat-cell *matCellDef="let row"> {{row.department_name}} </td>
+                            <ng-container matColumnDef="visitor">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Visitor Name </th>
+                                <td mat-cell *matCellDef="let row"> {{row.visitor}} </td>
                             </ng-container>
                         
-                            <ng-container matColumnDef="narration">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Description  </th>
-                            <td mat-cell *matCellDef="let row"> {{row.narration}} </td>
+                            <ng-container matColumnDef="start">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Date  </th>
+                                <td mat-cell *matCellDef="let row"> {{row.start | date: 'shortDate'}} </td>
+                            </ng-container>
+
+                            <ng-container matColumnDef="msisdn">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone No.  </th>
+                                <td mat-cell *matCellDef="let row"> {{row.msisdn}} </td>
+                            </ng-container>
+
+                            <ng-container matColumnDef="status">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+                                <td mat-cell *matCellDef="let row">
+                                    <span [ngClass]="row.status === 'APPROVED' ? 'approved' : 'pending'" class="p-1 rounded shadow-sm">{{row.status | lowercase }}</span>
+                                </td>
+                            </ng-container>
+
+                            <ng-container matColumnDef="action">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+                                <td mat-cell *matCellDef="let row">
+                                    <div *ngIf="row.status !== 'APPROVED'" id="controls" class="d-flex align-items-center gap-1">
+                                        <div style="cursor: pointer;" class="yes">
+                                            <i  (click)="row(row.id, 'APPROVED')" class="bi bi-check-circle"></i>
+                                        </div>
+                                        <div style="cursor: pointer;" class="no">
+                                            <i (click)="approveAppoinment(row.id, 'DISAPPROVE')" class="bi bi-x-circle"></i>
+                                        </div>
+                                    </div>
+                                    <div *ngIf="row.status === 'APPROVED'">
+                                        -
+                                    </div>                                
+                                </td>
                             </ng-container>
                         
                             <tr mat-header-row class="border-bottom-light border-top-light light-text" *matHeaderRowDef="displayedColumns"></tr>
@@ -45,12 +74,12 @@
                             <tr class="mat-row" *matNoDataRow>
                             <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
                             </tr>
-                        </table> -->
+                        </table>
                         
                         <mat-paginator [pageSizeOptions]="[10, 25]" aria-label="Select page of users"></mat-paginator>
                     </mat-tab>
                     <mat-tab label="Leave Requests">
-                        <app-premise-leave-reqs></app-premise-leave-reqs>
+                        <app-premise-leave-reqs [premiseId]="premiseId"></app-premise-leave-reqs>
                     </mat-tab>               
                 </mat-tab-group>
             </div>             
