--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,9 @@
               <a routerLinkActive="active" routerLink="companies" (click)="viewPremiseCompanies()">
                 <span><i class="bi bi-grid-3x3-gap-fill mx-3"></i></span>
                 Companies</a>    
-              <a routerLinkActive="active" routerLink="premises" >
+              <!-- <a routerLinkActive="active" routerLink="premises" >
                 <span><i class="bi bi-buildings-fill mx-3"></i></span>
-                Premises</a>   
+                Premises</a>    -->
               <a routerLinkActive="active" routerLink="notifications" (click)="viewPremiseNotifications()">
                 <span><i class="bi bi-buildings-fill mx-3"></i></span>
                 Notifications</a>
