--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
                         <i class="bi bi-buildings-fill" style="font-size: 1.5rem;color: #fc8bfc;"></i>
                     </div>
                     <div class="h-100 d-flex justify-content-center align-items-center flex-column">
-                        <h3 class="dark-text mb-1" style="font-size: 30px;">300</h3>
+                        <h3 class="dark-text mb-1" style="font-size: 30px;">{{premises.length}}</h3>
                         <p class="light-text">Premises</p>
                     </div>
                 </div>
@@ -67,9 +67,9 @@
         </div>
     </div>
 
-    <div class="row my-3 justify-content-between px-3">
+    <div id="hide" class="row my-3 justify-content-between px-3">
         <div class="col-md-3 light-border px-0">
-            <div class="row p-1">
+            <div class="row p-1" style="overflow-y: hidden;">
                 <h2>Account Premises</h2>
                 <div *ngIf="premises" class="p-1">
                     <div  class="premise rounded-1 shadow-sm px-3 py-3" [ngClass]="{'active':premise.premise_id === showingPremiseId}" *ngFor="let premise of premises;let i = index">
@@ -81,7 +81,18 @@
 
 
         <div class="col-md-8 light-border" style="height: 400px;">
-
+            <div id="chart">
+                <apx-chart
+                  [series]="chartOptions.series"
+                  [chart]="chartOptions.chart"
+                  [dataLabels]="chartOptions.dataLabels"
+                  [plotOptions]="chartOptions.plotOptions"
+                  [responsive]="chartOptions.responsive"
+                  [xaxis]="chartOptions.xaxis"
+                  [legend]="chartOptions.legend"
+                  [fill]="chartOptions.fill"
+                ></apx-chart>
+              </div>
         </div>
     </div>
 
