--- a/src/styles.scss
+++ b/src/styles.scss
@@ -104,4 +104,11 @@ body {
         color: 	#fecf6d;
         background-color: #fed06d6e;
     }
+
+
+    .close {
+        font-size: 1.5rem;
+        right: 1rem!important;
+        font-weight: bold;
+    }
 }
