--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,20 @@
 <div style="position: relative;" id="wrapper">
   <mat-drawer-container>
-      <mat-drawer mode="side"  fixedInViewport fixedTopGap  fixedBottomGap opened style="width:300px;">
+      <mat-drawer mode="side" *ngIf="user"  fixedInViewport fixedTopGap  fixedBottomGap opened style="width:300px;">
           <mat-nav-list>
-              <a routerLinkActive="active" routerLink="dashboard" [routerLinkActiveOptions]="{ exact: true }">
+              <a *ngIf="user" routerLinkActive="active" routerLink="dashboard" [routerLinkActiveOptions]="{ exact: true }">
                 <span><i class="bi bi-house-fill mx-3"></i></span>
                 Dashboard</a>
-              <a routerLinkActive="active" routerLink="accounts" >
+              <a *ngIf="permission === 'SUPER_ADMIN'" routerLinkActive="active" routerLink="accounts" >
                 <span><i class="bi bi-buildings-fill mx-3"></i></span>
                 Accounts</a>   
-              <a routerLinkActive="active" routerLink="companies" (click)="viewPremiseCompanies()">
+              <a *ngIf="user" routerLinkActive="active" routerLink="companies" (click)="viewPremiseCompanies()">
                 <span><i class="bi bi-grid-3x3-gap-fill mx-3"></i></span>
                 Companies</a>    
               <!-- <a routerLinkActive="active" routerLink="premises" >
                 <span><i class="bi bi-buildings-fill mx-3"></i></span>
                 Premises</a>    -->
-              <a routerLinkActive="active" routerLink="notifications" (click)="viewPremiseNotifications()">
+              <a *ngIf="user" routerLinkActive="active" routerLink="notifications" (click)="viewPremiseNotifications()">
                 <span><i class="bi bi-buildings-fill mx-3"></i></span>
                 Notifications</a>
               <a routerLinkActive="active" routerLink="login" (click)="logout()">
