--- a/src/app/components/accounts/create-account/create-account.component.scss
+++ b/src/app/components/accounts/create-account/create-account.component.scss
@@ -9,6 +9,8 @@ button {
     transition: all ease .2s;
     border-radius: 0;
     margin: 0 .2rem;
+    padding: .4rem;
+    color: black;
 
     &:hover {
         background-color: yellow;
