--- a/src/app/components/company/create-company-dept/create-company-dept.component.html
+++ b/src/app/components/company/create-company-dept/create-company-dept.component.html
@@ -1,4 +1,7 @@
 <div class="p-2">
+    <div class="row flex-row-reverse text-end">
+        <p class="mb-0 my-4 mx-1close" style="cursor: pointer;font-size: 1.5rem;font-weight: bold;" (click)="closeDialog()"><i class="bi bi-x"></i></p>
+   </div>
     <h3>Add Departments</h3>
     <form [formGroup]="createDepartmentForm" (submit)="onDepartmentFormSubmit()">
         <div class="form-group">
@@ -9,6 +12,6 @@
             <label for="narration">Narration</label> 
             <input formControlName="narration" type="text" name="narration" id="narration" class="form-control">
         </div>
-        <button class="btn btn-outline-success btn-sm my-3" class="primary-btn" style="border-radius: 0;">Add Department</button>
+        <button class="btn-sm my-3" class="primary-btn" style="border-radius: 0;">Add Department</button>
     </form>
 </div>
