--- a/src/app/components/company/create-company/create-company.component.html
+++ b/src/app/components/company/create-company/create-company.component.html
@@ -1,4 +1,7 @@
 <div class="p-2">
+    <div class="row flex-row-reverse text-end">
+        <p class="mb-0 my-4 mx-1 close" style="cursor: pointer;font-size: 1.5rem;font-weight: bold;" (click)="closeDialog()"><i class="bi bi-x"></i></p>
+   </div>
     <h2 class="mb-0">Create Company</h2>
     <hr>
     <form [formGroup]="createCompanyForm" (submit)="onFormSUbmit()">
