--- a/src/app/components/company/create-staff/create-staff.component.html
+++ b/src/app/components/company/create-staff/create-staff.component.html
@@ -1,4 +1,7 @@
 <div class="container p-3">
+    <div class="row flex-row-reverse text-end">
+        <p class="mb-0 my-4 mx-1 close" style="cursor: pointer;font-size: 1.5rem;font-weight: bold;" (click)="closeDialog()"><i class="bi bi-x"></i></p>
+   </div>
     <h1 class="text-center fw-bold">Create Staff</h1>
     <form [formGroup]="createStaffForm" (submit)="onSubmit()">
         <div class="row">
