--- a/src/app/components/company/update-company-settings/update-company-settings.component.scss
+++ b/src/app/components/company/update-company-settings/update-company-settings.component.scss
@@ -3,17 +3,15 @@ button {
     background-color: transparent;
     cursor: pointer;
     transition: all ease .2s;
+    border-radius: 0;
+    margin: 0 .2rem;
     padding: .4rem;
-    margin: 1rem 0;
-    
+    color: black;
 
     &:hover {
         background-color: yellow;
-        border: 2px solid transparent;
+        border: 2px solid yellow;
+        color: black;
+
     }
-}
-
-
-input {
-    border-radius: 0;
 }
