--- a/src/app/pages/staff-login/staff-login.component.html
+++ b/src/app/pages/staff-login/staff-login.component.html
@@ -1,8 +1,8 @@
 <div class="row" style="height: 96vh;">
-    <div class="col-md-6 col-lg-5 pt-5 mx-auto" style="color: black;">
+    <div class="col-md-6 col-lg-3 pt-5 mx-auto" style="color: black;">
         <form class="mx-auto px-4 py-3" [formGroup]="staffForm" (submit)="onSubmit()">
             <h2 class="text-center">Staff Login</h2>
-            <p class="text-center light-text/">Please enter your details</p>
+            <p class="text-center light-text">Please enter your details</p>
             <div class="form-group mt-4">
                 <label for="msisdn">Phone no</label>
                 <input  type="text" formControlName="msisdn" class="form-control" name="msisdn" id="msisdn" placeholder="254...">
@@ -12,7 +12,7 @@
                 <input type="code" formControlName="code" class="form-control" id="code" placeholder="Enter code">
             </div>
             
-            <button class="btn btn-primary mt-3" style="width: 100%;"><span *ngIf="hasPassword">Validate OTP</span> <span *ngIf="!hasPassword">get otp</span></button> 
+            <button class="btn btn-outline-primary mt-3" style="width: 100%;"><span *ngIf="hasPassword">Validate OTP</span> <span *ngIf="!hasPassword">get otp</span></button> 
         </form>
         <div class="row px-4">
             <div class="d-flex align-items-center justify-content-between">
