feature: add company leave types

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,8 @@
 
 
     .active {
-        background-color: rgba(109, 209, 248, 0.288); 
+        background-color: rgba(192, 237, 255, 0.363); 
+        border-left: 5px solid rgb(110, 110, 250);
 
 
         span {
