--- a/src/app/pages/company/company.component.html
+++ b/src/app/pages/company/company.component.html
@@ -60,6 +60,9 @@
                     <mat-tab label="Shifts"> 
                         <app-company-shifts [companyId]="companyId"></app-company-shifts>
                     </mat-tab>
+                    <mat-tab label="Leave Types">
+                        <app-company-leaves [companyId]="companyId"></app-company-leaves>
+                    </mat-tab>
                 </mat-tab-group>
             </div>             
         </div>
