--- a/src/app/components/company/create-company-settings/create-company-settings.component.html
+++ b/src/app/components/company/create-company-settings/create-company-settings.component.html
@@ -34,6 +34,27 @@
                 <label for="sms_name">SMS Name</label> 
                 <input formControlName="sms_name" type="text" name="sms_name" id="sms_name" class="form-control">
             </div>
+
+            <div class="form-group mb-3">
+                <label>Staff App Login</label>
+                <select  class="form-select" formControlName="staff_app_login">
+                    <option value="" disabled>Choose...</option>
+                    <option *ngFor="let designation of companyDesignations"  [ngValue]="designation.id">{{designation.description}}</option>             
+                </select>
+            </div> 
+
+
+            <div class="form-group">
+                <label for="report_email">Report Email</label> 
+                <input formControlName="report_email" type="text" name="report_email" id="report_email" class="form-control">
+            </div>
+
+            <div class="form-group">
+                <label for="report_time">Report Time</label> 
+                <input formControlName="report_time" type="time" name="report_time" id="report_time" class="form-control" step="900">
+            </div>
+
+
             <button class="mt-3">Add Settings</button>
         </form>
     </div>
