--- a/src/app/components/company/create-company/create-company.component.scss
+++ b/src/app/components/company/create-company/create-company.component.scss
@@ -1,4 +1,17 @@
 button, input {
+    border-radius: 0;    
+}
+
+button {
+    border: 2px solid black;
+    background-color: transparent;
+    cursor: pointer;
+    transition: all ease .2s;
+    padding: .4rem;
     border-radius: 0;
-    
+
+    &:hover {
+        background-color: yellow;
+        border: 2px solid transparent;
+    }
 }
