--- a/src/app/pages/companies/companies.component.html
+++ b/src/app/pages/companies/companies.component.html
@@ -56,7 +56,9 @@
                 <mat-tab label="Beacons">
                     <app-premise-beacons [premiseId]="premiseId"></app-premise-beacons>
                 </mat-tab>
-                <!-- <mat-tab label="Third"> Content 3 </mat-tab> -->
+                <mat-tab label="Appointment Tags">
+                    <app-premise-appointment-tags [premiseId]="premiseId"></app-premise-appointment-tags>
+                </mat-tab>
             </mat-tab-group>            
           
         </div>
