--- a/src/app/pages/shift-details/shift-details.component.html
+++ b/src/app/pages/shift-details/shift-details.component.html
@@ -54,7 +54,7 @@
                         
                     </mat-tab>
                     <mat-tab label="Unassigned Company Staff">
-                        <app-unassigned-staff [companyId]="companyId"></app-unassigned-staff>
+                        <app-unassigned-staff [shiftId]="shiftId" [companyId]="companyId"></app-unassigned-staff>
                     </mat-tab>
                 </mat-tab-group>
             </div>             
