--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,8 +101,8 @@ body {
 
 
     .pending {
-        color: 	#fecf6d;
-        background-color: #fed06d6e;
+        color: 	#302e2a;
+        background-color: #fdc7516e;
     }
 
 
