--- a/src/app/components/premise/premise-leave-reqs/premise-leave-reqs.component.html
+++ b/src/app/components/premise/premise-leave-reqs/premise-leave-reqs.component.html
@@ -17,17 +17,27 @@
 
         <ng-container matColumnDef="requested_from">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Date  </th>
-            <td mat-cell *matCellDef="let row"> {{row.requested_from}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.requested_from | date:'fullDate'}} </td>
         </ng-container>
 
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Status  </th>
-            <td mat-cell *matCellDef="let row"> {{row.status}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.status | lowercase}} </td>
         </ng-container>
 
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Action  </th>
-            <td mat-cell *matCellDef="let element"><span style="font-size: 1.5rem;"><i [ngClass]="element.fingerprint.fingerprint ? 'registered' : ''" class="bi bi-fingerprint light-text" ></i></span></td>
+            <td mat-cell *matCellDef="let element">
+                <div id="controls" class="d-flex align-items-center gap-1">
+                    <div style="cursor: pointer;" class="yes">
+                        <i  (click)="approveLeave(element.id, 'APPROVED')" class="bi bi-check-circle"></i>
+                    </div>
+                    <div style="cursor: pointer;" class="no">
+                        <i (click)="approveLeave(element.id, 'CANCELLED')" class="bi bi-x-circle"></i>
+                    </div>
+                </div>
+                <!-- <span style="font-size: 1.5rem;"><i [ngClass]="element.fingerprint.fingerprint ? 'registered' : ''" class="bi bi-fingerprint light-text" ></i></span> -->
+            </td>
         </ng-container>
     
         <tr mat-header-row class="border-bottom-light border-top-light light-text" *matHeaderRowDef="displayedColumns"></tr>
