--- a/src/app/components/staff/create-appointment/create-appointment.component.html
+++ b/src/app/components/staff/create-appointment/create-appointment.component.html
@@ -29,14 +29,19 @@
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
         </div>
+        <!-- <div class="form-group">
+            <label for="duration">Duration</label> 
+            <input formControlName="duration" type="time" step="3600000" min="7:00" max="17:00" name="duration" id="duration" class="form-control">
+        </div> -->
+        <div class="form-group">
+            <label for="duration">Duration</label> 
+            <input formControlName="duration" type="text" name="duration" placeholder="Appointment duration in minutes...i.e 30" id="duration" class="form-control">
+        </div>
+        <hr>
         <div class="form-check form-switch">
             <label class="form-check-label" for="flexSwitchCheckDefault">Repeating Appointment ? No/Yes</label>
             <input formControlName="repeat" style="cursor: pointer;" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-        </div>
-        <div class="form-group">
-            <label for="duration">Duration</label> 
-            <input formControlName="duration" type="time" step="900" name="duration" id="duration" class="form-control">
-        </div>
+        </div>     
         <div class="form-group">
             <label for="email">Email</label> 
             <input formControlName="email" type="email" name="email" id="email" class="form-control">
