--- a/src/app/components/company/company-leaves/company-leaves.component.html
+++ b/src/app/components/company/company-leaves/company-leaves.component.html
@@ -24,6 +24,6 @@
         </tr>
     </table>
     
-    <mat-paginator [pageSizeOptions]="[13, 25]" aria-label="Select page of users"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[10]" aria-label="Select page of users"></mat-paginator>
 </div>
 
