--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,24 @@
                 Accounts</a>   
               <a *ngIf="user" routerLinkActive="active" routerLink="companies" (click)="viewPremiseCompanies()">
                 <span><i class="bi bi-grid-3x3-gap-fill mx-3"></i></span>
-                Companies</a>    
+                Companies</a> 
+
+                <!-- <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+                  <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
+                    <button mat-icon-button disabled></button>
+                    {{node.name}}
+                  </mat-tree-node>
+                  <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
+                    <button mat-icon-button matTreeNodeToggle
+                            [attr.aria-label]="'Toggle ' + node.name">
+                      <mat-icon class="mat-icon-rtl-mirror">
+                        {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                      </mat-icon>
+                    </button>
+                    {{node.name}}
+                  </mat-tree-node>
+                </mat-tree>    -->
+                
               <!-- <a routerLinkActive="active" routerLink="premises" >
                 <span><i class="bi bi-buildings-fill mx-3"></i></span>
                 Premises</a>    -->
@@ -29,7 +46,7 @@
                         </div>
                         <div class="px-2">
                             <h3 class="mb-0 dark-text">{{user?.user}}</h3>
-                            <small class="light-text">koki company</small>
+                            <small class="light-text">{{currentPremise?.name | uppercase }}</small>
                         </div>
                     </div>
               </div>
